fix alignment

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h1{
    display: flex;
    justify-content: center;
    align-items: center;
+   margin-left: 1rem;
 
 }
 .choice:hover{
@@ -47,17 +48,20 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap:3rem;
+    gap:4rem;
     margin-top: 3rem;
+    margin-left: 7rem;
     font-size: 2rem;
 }
 
 #user-score,#comp-score{
     font-size: 5rem;
+    
 }
 
 .msg-container{
     margin-top: 5rem;
+    margin-left: 7rem;
 
 }
 
@@ -86,6 +90,7 @@ img{
    display: flex;
    justify-content: center;
    align-items: center;
+   margin-left: 1rem;
 }
 
 
@@ -94,6 +99,7 @@ img{
     background-color: #081b31;
     color: #fff;
     font-size: 1.2rem;
+    width: 100px;
 
   
 }
@@ -102,6 +108,8 @@ img{
     background-color: #081b31;
     color: #fff;
     font-size: 1.2rem;
+    width: 100px;
+
 
 
   
